<resources>
    <string name="app_name">Unfolds Counter</string>
    <string name="allow">Allow</string>
    <string name="exit">Exit</string>
    <string name="permission_required">Permission required</string>
    <string name="disable_battery_optimization_message">To ensure the continuous operation of the app, allow background usage in the settings.</string>
    <string name="notification_channel_name">Unfold Counter Service Channel</string>
    <string name="notification_title">Unfold Counter Service</string>
    <string name="notification_content">Counting unfolds&#8230;</string>
    <string name="settings">Settings</string>
    <string name="min_threshold">Threshold</string>
    <string name="min_threshold_description">The device will be considered unfolded if the opening angle is greater than or equal to %1$s</string>
    <string name="degrees_from_int">%1$dº</string>
    <string name="degrees_from_float">%1$.01fº</string>
    <string name="percent_from_int">%1$d%%</string>
    <string name="percent_from_float">%1$.01f%%</string>
    <string name="hinge_stats">Hinge Stats</string>
    <string name="current_threshold">Current Threshold</string>
    <string name="stats_begin_date">Counter Start</string>
    <string name="stats_begin_date_description">%1$s (%2$s ago)</string>
    <string name="restart_stats_message">The statistics will be reset.\nAre you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="unfolds_count">Unfolds Count</string>
    <string name="unfolded_time">Unfolded Time</string>
    <string name="unfolded_time_description">%1$s (%2$s of the time)</string>
    <string name="app_info">App info</string>
    <string name="app_version">Version</string>
    <string name="app_version_description">%1$s (compiled on %2$s)</string>
    <string name="middle_lists_separator">,\u0020</string>
    <string name="last_lists_separator">\u0020and\u0020</string>
</resources>